--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,10 @@
-img {
+.logo-img {
   width: 40px;
   height: 40px;
+}
+
+.profile-img {
+  width: 100%;
 }
 
 .home {
@@ -9,3 +13,16 @@ img {
   justify-content: space-between;
 }
 
+.section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.section-content {
+  align-items: center;
+}
+
+.logo-img-container {
+  flex-direction: row;
+}
